tests/e2e/fail/array_cap_field.ep
# COMPILE_ERROR: type u8[] has no field 'cap'
fun main(): void {
    let values = new u8[]
    os.ExitProcess(values.cap)
}
